# molen

./: .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitignore  ARCHITECTURE.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODE_QUALITY_SUMMARY.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_QUICK_REF.md  GETTING_STARTED.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_TESTS_SUMMARY.md  INTEGRATION_TEST_GUIDE.md  KAFKA_IMPLEMENTATION_SUMMARY.md  KAFKA_INTEGRATION_GUIDE.md  KAFKA_QUICK_SETUP.md  KUBERNETES_DEPLOYMENT_SUMMARY.md  LINTING_AND_TYPE_CHECKING.md  MIGRATION_GUIDE_V1_TO_V2.md  NAMING_MIGRATION_GUIDE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PRODUCTION_REQUIREMENTS.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  REDPANDA_IMPLEMENTATION_SUMMARY.md  REDPANDA_INTEGRATION_GUIDE.md  REDPANDA_QUICK_SETUP.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  RUST_PIVOT_SUMMARY.md  (+19 more)
.github/workflows/: build-push-deploy.yml  ci.yml  create-fraud-ops-issues.yml  integration-tests.yml
apps/api/: Dockerfile  README.md  package.json  tsconfig.json
apps/api/src/: db-init.ts  index.test.ts  index.ts  kafka.ts  seed.ts
apps/api/src/services/: KafkaEventStream.ts  MockEventStream.ts  MockRepository.ts  PostgresRepository.ts  factory.ts  interfaces.ts
apps/api/src/services/repositories/: ExtractorRepository.ts  ModelRepository.ts  OrchestratorRepository.ts  RuleRepository.ts  SchemaRepository.ts  mappers.ts
apps/engine/: Cargo.toml  Dockerfile  README.md
apps/engine/src/: evaluator.rs  events.rs  main.rs
apps/web/: DEVELOPER_GUIDE.md  Dockerfile  README.md  eslint.config.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  test-component.tsx
apps/web/src/app/components/common/: DataTypeBadge.tsx
apps/web/src/app/components/forms/: FeatureExtractorForm.tsx  InputSchemaForm.tsx  JsonSchemaBuilder.tsx  ModelForm.tsx  RuleForm.tsx  TypeSafeInputSchemaForm.tsx  TypeSafeSchemaBuilder.tsx
apps/web/src/app/components/forms/JsonSchemaBuilder/: FieldRow.tsx
apps/web/src/app/components/forms/TypeSafeSchemaBuilder/: FieldRow.tsx
apps/web/src/app/components/layout/: Header.tsx  Logo.tsx  Sidebar.tsx
apps/web/src/app/components/orchestrator/: AggregatorNode.tsx  DeploymentModal.tsx  DeploymentsView.tsx  EnvironmentCard.tsx  FeatureExtractorNode.tsx  LogicAggregatorNode.tsx  ModelNode.tsx  RuleNode.tsx
apps/web/src/app/components/ruleEngine/: CodeLogicEditor.tsx  RuleTypeDialog.tsx  TypedRuleForm.tsx  VisualLogicBuilder.tsx
apps/web/src/app/components/ruleEngine/TypedRuleForm/: ActionSelect.tsx
apps/web/src/app/components/ruleEngine/VisualLogicBuilder/: LogicBlockRow.tsx
apps/web/src/app/components/ui/: calendar.tsx  carousel.tsx  chart.tsx  dialog.tsx  menubar.tsx  sidebar.tsx  switch.tsx  use-mobile.ts
apps/web/src/app/components/ui/chart/: context.tsx  legend.tsx  tooltip.tsx
apps/web/src/app/components/ui/menubar/: base.tsx  items.tsx
apps/web/src/app/components/ui/sidebar/: base.tsx  context.tsx  group.tsx  menu.tsx  sub.tsx  utils.tsx
apps/web/src/app/hooks/: useMolenApi.ts
apps/web/src/app/hooks/molen-api/: appState.ts  common.ts  extractors.ts  models.ts  orchestrators.ts  rules.ts  schemas.ts
apps/web/src/app/pages/: Dashboard.tsx  FeatureExtractors.tsx  InputSchemas.tsx  Models.tsx  Orchestrator.tsx  OrchestratorEditor.tsx  Rules.tsx  TypeSafeInputSchemas.tsx  TypedRules.tsx
apps/web/src/app/pages/Orchestrator/components/: DeleteConfirmDialog.tsx  NewOrchestratorDialog.tsx  OrchestratorComponents.tsx
apps/web/src/app/pages/OrchestratorEditor/: types.ts  useConnectionLogic.ts  useOrchestratorLogic.ts  utils.ts
apps/web/src/app/pages/OrchestratorEditor/components/: EditorHeader.tsx  NodePropertiesCards.tsx  PaletteItem.tsx  PropertiesPanel.tsx  TestRunDialog.tsx
apps/web/src/app/state/: ruleEngineState.ts
apps/web/src/app/types/: molen.ts  ruleEngine.ts
apps/web/src/imports/pasted_text/: molen-ui-design.md
apps/web/src/styles/: globals.css  theme.css
e2e-tests/: package.json  playwright.config.ts
e2e-tests/playwright-report/: index.html
e2e-tests/tests/: fraud-workflow.spec.ts.tmp  schema-management.spec.ts
frontend/: .env.development  .env.production  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  test-setup.ts
frontend/src/components/Builder/: Canvas.test.tsx  Canvas.tsx  Sidebar.tsx
frontend/src/components/nodes/: LogicGateNode.tsx  ModelNode.tsx  index.ts
frontend/src/services/: api.ts  mockBackend.ts
frontend/src/store/: useBuilderStore.test.ts  useBuilderStore.ts
frontend/src/types/: molen.ts
helm/molen/: Chart.yaml  values.yaml
helm/molen/templates/: api-deployment.yaml  frontend.yaml  worker-deployment.yaml
init-scripts/: create-topics.sh  seed.sql
k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml.template  ui-deployment.yaml  ui-service.yaml
molen-api/: Cargo.toml  Dockerfile
molen-api/src/: lib.rs
molen-core/: Cargo.toml
molen-core/src/: lib.rs  traits.rs  types.rs
molen-core/src/providers/: analytics.rs  events.rs  inference.rs  mod.rs  state.rs  storage.rs
molen-worker/: Cargo.toml  Dockerfile
molen-worker/src/: factories.rs  lib.rs  orchestration.rs  shadow.rs
scripts/: create-secrets.sh  deploy.sh
(+2 files in other folders)
