[workspace]
members = [
    "molen-core",
    "molen-worker",
    "molen-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Molen Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "uuid", "chrono"] }

# Redis
fred = { version = "8.0", features = ["enable-rustls"] }

# Kafka/Redpanda (without cmake-build to avoid compilation issues)
rdkafka = "0.36"

# S3/MinIO
aws-sdk-s3 = "1.15"
aws-config = "1.1"
aws-credential-types = "1.1"

# Elasticsearch (using HTTP client approach)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

# Testing
mockall = "0.12"
testcontainers = "0.15"
