[package]
name = "molen-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.36", features = ["tokio"] }
futures = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
async-trait = "0.1"
regex = "1"
